# solidity

./: .cproject  .gitignore  .project  .travis.yml  Changelog.md  README.md  SOLC-VERIFY-README.md  klee-instructions.md  libfuzzer-instructions.md
.circleci/: config.yml
.srimeta/: srimeta.yaml
cmake/: FindBoogie.cmake  FindZ3.cmake
docs/: control-structures.rst  index.rst  miscellaneous.rst  types.rst
libevmasm/: Assembly.cpp  EVMSchedule.h  GasMeter.cpp  GasMeter.h  Instruction.cpp  Instruction.h
libsolidity/: CMakeLists.txt  grammar.txt
libsolidity/analysis/: DocStringAnalyser.cpp  DocStringAnalyser.h  GlobalContext.h  ReferencesResolver.cpp  TypeChecker.cpp  TypeChecker.h
libsolidity/ast/: AST.h  ASTBoogieConverter.cpp  ASTBoogieConverter.h  ASTBoogieExpressionConverter.cpp  ASTBoogieExpressionConverter.h  ASTBoogieStats.cpp  ASTBoogieStats.h  ASTBoogieUtils.cpp  ASTBoogieUtils.h  ASTJsonConverter.cpp  BoogieAst.cpp  BoogieAst.h  BoogieContext.cpp  BoogieContext.h  Types.cpp  Types.h
libsolidity/codegen/: ExpressionCompiler.cpp
libsolidity/formal/: Why3Translator.cpp
libsolidity/interface/: CompilerStack.h  InterfaceHandler.cpp
libsolidity/parsing/: Parser.cpp  Parser.h
scripts/: codespell_whitelist.txt  install_solc_verify_deps.sh  solc-verify.py.in  tests.sh
solc/: CMakeLists.txt  CommandLineInterface.cpp  CommandLineInterface.h  solc-verify.py.in
test/: RPCSession.cpp
test/libsolidity/: GasMeter.cpp  SolidityABIJSON.cpp  SolidityEndToEndTest.cpp  SolidityNameAndTypeResolution.cpp
test/solc-verify/: Addresses.sol  Addresses.sol.gold  Aliasing.sol  Aliasing.sol.gold  Arithmetic.sol  Arithmetic.sol.gold  ArrayLayout.sol  Arrays.sol  Arrays.sol.gold  ArraysCopying.sol.gold  ArraysMem.sol  ArraysMem.sol.gold  ArraysMemWarning.sol.gold  ArraysPushPop.sol  ArraysPushPop.sol.gold  ArraysStorage.sol  ArraysStorage.sol.gold  Assignments.sol  Assignments.sol.gold  BaseConstructorAndModifiers.sol  BaseConstructorAndModifiers.sol.gold  BaseConstructorMulti.sol  BaseConstructorMulti.sol.gold  BaseConstructorOrder.sol  BaseConstructorOrder.sol.flags  BaseConstructorOrder.sol.gold  BaseConstructorWithModifiers.sol  BaseConstructorWithModifiers.sol.gold  BecTokenSimplifiedCorrect.sol  BecTokenSimplifiedCorrect.sol.gold  BecTokenSimplifiedOverflow.sol  BecTokenSimplifiedOverflow.sol.flags  BecTokenSimplifiedOverflow.sol.gold  (+170 more)
(+264 files in other folders)
